# mcp-grafana

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  mcpgrafana.go  mcpgrafana_test.go  tls_test.go  tools.go  tools_test.go
.github/: dependabot.yml
.github/workflows/: go.yml  release.yml
cmd/linters/jsonschema/: main.go
cmd/mcp-grafana/: main.go
examples/: tls_example.go
internal/linter/jsonschema/: README.md  jsonschema_lint.go  jsonschema_lint_test.go
testdata/: prometheus-entrypoint.sh  prometheus-seed.yml  prometheus.yml
testdata/provisioning/alerting/: contact_points.yaml
testdata/provisioning/datasources/: datasources.yaml
tests/: README.md  admin_test.py  conftest.py  dashboards_test.py  loki_test.py  pyproject.toml  utils.py
tools/: admin.go  alerting.go  alerting_client.go  alerting_client_test.go  alerting_test.go  asserts.go  asserts_cloud_test.go  asserts_test.go  cloud_testing_utils.go  dashboard.go  dashboard_test.go  datasources.go  datasources_test.go  incident.go  incident_integration_test.go  loki.go  oncall.go  oncall_cloud_test.go  prometheus.go  prometheus_test.go  prometheus_unit_test.go  pyroscope.go  pyroscope_test.go  search.go  sift.go  sift_cloud_test.go
